PR #38: RAG - the API answers questions about itself (DeepSeek + Ollama docs_search)